<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bravi.capigoatrainer.app.RoundRunActivity">

    <!-- Word and Current Score Layout  -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#1C546D"
        android:layout_gravity="left">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_word"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:layout_marginTop="10pt"
            android:textColor="#ffffff"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txt_wordNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="left"
            android:text="0/0"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:layout_margin="5pt"
            android:textColor="#ffffff"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/lbl_score"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:layout_margin="5pt"
            android:textColor="#ffffff"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txt_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="left"
            android:text="0/50"
            android:layout_margin="5pt"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:textColor="#ffffff"
            android:textStyle="bold"
            />

        </LinearLayout>

        <!-- Infinitive Verb Layout -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:background="#ffffff"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_infinitiveVerb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Forgive"
                android:gravity="center_horizontal"
                android:textSize="@dimen/abc_action_bar_title_text_size"
                />

        </LinearLayout>

    <!-- Current Verb tense Layout -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        >

        <TextView
            android:id="@+id/txt_currentVerbTense"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Past Participle:"
            android:gravity="center_horizontal"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            />

    </LinearLayout>

    <!-- Verb input Layout -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        >

        <EditText
            android:id="@+id/txt_verbInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:inputType="text"/>

    </LinearLayout>

    <!-- Next button Layout -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

    <Button
        android:id="@+id/btn_NextVerb"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_nextVerbText"
        />

    </LinearLayout>

</LinearLayout>


